# scicomp-exam

./: .gitignore  .readthedocs.yml  .travis.yml  README.md  setup.cfg
.github/workflows/: workflow.yml
docs/source/: bwt.rst  conf.py  index.rst  kmp.rst  lzw.rst
docs/source/plotting/: bwt.py  h2g2.txt  kmp.py  lzw.py
docs/source/plotting/pi/: pi-42-compress.py  pi-42-compressions.pickle  pi-42.py  pi-bases.pickle  pi-bases.py  pi-test.py  truth.py
scicomp/exam/kk/: __init__.py  bwt.py  kmp.py  lzw.py
scicomp/exam/kk/bwt/: __init__.py  collections.py  end_marker.py  suffix_array.py
tests/: test_bwt.py  test_kmp.py  test_lzw.py  utils.py
