[metadata]
name = scicomp-exam-kk
version = attr: scicomp.exam.kk.__version__
description = Scientific Computing 2021 exam @ SISSA
author = Kosio Karchev
author_email = kosiokarchev@gmail.com

[options]
packages = find:
python_requires = >=3.9
install_requires =
    more_itertools

[options.packages.find]
include = scicomp.exam.kk

[options.extras_require]
testing = pytest

[tool:pytest]
testpaths = tests
